--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -13,7 +13,6 @@
         <option value="en">English</option>
         <option value="es">Español</option>
         <option value="fr">Français</option>
-
     </select>
     <h1 id="title">Calculadora</h1>
     <p id="boas-vindas">Esta é uma calculadora em diferentes idiomas</p>
@@ -27,6 +26,7 @@
     <input type="button" value="Dividir" id="btDividir">
     <p id="resultado"></p>
 </body>
-<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="math.js"></script>
+<script type="text/javascript" src="translate.js"></script>
 
 </html>
